# unified_windows

./: .gitignore  AGENTS.md  AUDIT_AND_FIXES_2026-03-27.md  README.md  SECURITY.md  TURBOQUANT.md  apple-unified-memory-architecture.md  conftest.py  feature_request_list.md  plan.md  plan_v2.md  problems.md  program.md  pyproject.toml  results.md  state.md  thoughts_1.md  turboquant-deep-research.md
.github/workflows/: ci.yml
astrawave/: __init__.py  capabilities.py  cli.py  cuda_runtime.py  errors.py  fallback.py  hardware_probe.py  inference_runtime.py  ipc_client.py  ipc_protocol.py  ipc_server.py  quantization.py  runtime_tuning.py  sdk.py  security.py  service.py  service_host.py  telemetry.py  tiering.py  types.py
audit-report/: 00-repo-index.md  01-architecture.md  02-code-quality.md  03-security.md  04-performance.md  05-testing.md  06-features.md  07-executive-summary.md  README.md
audit-report/raw/: phaseA_tests_read.txt  phaseA_unittest_discover_v.txt  phaseB_compileall.txt  phaseB_infra_discovery.txt  phaseB_pytest_q.txt  phaseB_pytest_tests_q_pythonpath.txt  phaseC_cli_default_caller_attestation_probe.txt  phaseC_cli_remote_default_failure_probe.txt  phaseC_client_pipe_fallback_probe.txt  phaseC_closed_session_size_probe.txt  phaseC_closed_sessions_growth_probe.txt  phaseC_git_status.txt  phaseC_python_file_index.txt  phaseC_repo_metrics.txt  phaseC_runstep_invalid_prompt_probe.txt  phaseC_server_pipe_fallback_probe.txt  phaseC_telemetry_growth_probe.txt  (+7 more)
docs/: api-contract.md  compatibility-matrix.md  operations-readiness.md  phase4-live-inference-ctospec.md  phase5-large-model-orchestration.md  phase6-ram-target-benchmarking.md  release-governance.md  security-architecture.md  telemetry-governance.md  test-plan.md  threat-model.md
reports/: phase3_audit_report.md
scripts/: cuda_transfer_poc.py  generate_compliance_artifacts.py  generate_release_gate_report.py  live_inference_smoke.py  ram_target_benchmark.py  run_hardware_gate.py  run_operations_drills.py  soak_test.ps1
tests/: conftest.py  test_capability_matrix_contract.py  test_cli_contract.py  test_fallback_contract.py  test_inference_runtime_contract.py  test_integrated_service_contract.py  test_ipc_client_sdk.py  test_ipc_protocol.py  test_ipc_server.py  test_live_inference_smoke.py  test_phase2_end_to_end.py  test_phase3_runtime_smoke.py  test_phase3_service_host.py  test_phase7_contract.py  test_ram_target_benchmark.py  test_release_gate_report_contract.py  test_security_contract.py  test_service_contract.py  test_telemetry_contract.py  test_tq_integration.py
(+60 files in other folders)
