[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astrawave"
version = "0.7.0"
description = "Windows user-mode service for unified RAM/VRAM orchestration in local LLM inference"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = "AstraWeave Contributors"}]
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
