[build-system]
requires = ["setuptools>=68.0,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "astrawave"
version = "0.7.0"
description = "Windows user-mode service for unified RAM/VRAM orchestration in local LLM inference"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = "AstraWeave Contributors"}]
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]
keywords = ["llm", "inference", "gpu", "vram", "windows", "cuda"]

[project.urls]
Repository = "https://github.com/iamrws/unified_windows"
Issues = "https://github.com/iamrws/unified_windows/issues"

[project.optional-dependencies]
dev = ["pytest>=9.0", "ruff>=0.4", "mypy>=1.10"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
